# promptlock

./: .gitignore  .promptlock.toml  README.md  alembic.ini  docker-compose.yml  implementation.md  pyproject.toml
.promptlock/: config
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_environments_promotions.py
api/: Dockerfile  __init__.py  audit.py  config.py  database.py  dependencies.py  main.py  models.py  rbac.py  requirements.txt  schemas.py
api/routers/: approvals.py  audit.py  auth.py  environments.py  prompts.py  roles.py
promptlock/: __init__.py  auth.py  events.py  main.py
promptlock/api/: __init__.py  client.py
promptlock/commands/: __init__.py  diff.py  env.py  init_cmd.py  log_cmd.py  login.py  logout.py  promote.py  pull.py  push.py  rollback.py  save.py  status.py  tag.py  validate.py
promptlock/local/: __init__.py  config.py  store.py
tests/: conftest.py
tests/api/: conftest.py  test_approval_workflow.py  test_audit_api.py  test_auth.py  test_environments.py  test_prompts.py  test_roles.py
tests/cli/: test_diff.py  test_env.py  test_init.py  test_log.py  test_login.py  test_logout.py  test_promote.py  test_pull.py  test_push.py  test_rollback.py  test_save.py  test_status.py  test_tag.py  test_validate.py
tests/unit/: test_auth.py  test_client.py  test_config.py  test_events.py  test_store.py
