[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptlock"
version = "0.4.0"
description = "Version control and enterprise governance for prompts"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "llm-toolkit-schema>=1.1.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic[email]>=2.7",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "boto3>=1.34",
    "python-multipart>=0.0.9",
    "llm-toolkit-schema>=1.1.1",
]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "respx>=0.21",
    "anyio>=4",
]

[project.scripts]
promptlock = "promptlock.main:cli"

[project.urls]
Homepage = "https://github.com/promptlock/promptlock"
Issues = "https://github.com/promptlock/promptlock/issues"

[tool.hatch.build.targets.wheel]
packages = ["promptlock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=promptlock",
    "--cov=api",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=85",
    "-v",
]

[tool.coverage.run]
source = ["promptlock", "api"]
omit = [
    "*/migrations/*",
    "alembic/*",
    "*/__pycache__/*",
    "*/Dockerfile",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
